--- a/functions/package.json
+++ b/functions/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "firebase-admin": "~6.0.0",
     "firebase-functions": "^2.0.3",
-    "haversine" : "^1.1.0"
+    "haversine": "^1.1.0",
+    "system-sleep": "^1.3.6"
   },
   "private": true
 }
